--- a/Markdown.Rmd
+++ b/Markdown.Rmd
@@ -80,6 +80,7 @@ library(echarts4r)
 library(word2vec)
 library(crosstalk)
 library(DT)
+library(plotly)
 
 data("stop_words")  # Fixando as stopwords
 stop_words <- stop_words %>% add_row(word = c("yeah", "gonna", "hey"))
@@ -649,39 +650,40 @@ boxplot_por_album <- function(var){
 top10var_por_album <- function(var){
   
   # Era para estar em outra ordem...
-  # Acho que só vou colocar um do lado do outro
   
-  songs %>% 
+  g1 <- songs %>% 
     drop_na() %>%
     mutate(Var = !!sym(var)) %>% 
-    arrange(Var) %>%
-    slice(1:10, (n() - 9):n()) %>% 
-    mutate(Top = rep(c("Menores", "Maiores"), each = 10)) %>% 
+    slice_min(order_by = Var, n = 10) %>% 
     group_by(album_name) %>% 
     e_charts(SName) %>% 
     e_bar(Var, stack = "grp") %>% 
     e_flip_coords() %>% 
     e_labels(position = "right") %>% 
-    e_mark_line(data = list(yAxis = 9), title = "Divisão") %>% 
+    e_grid(left = "40%") %>% 
+    e_title("Valores Menores") %>% 
+    e_legend(bottom = 0) %>% 
     e_tooltip(backgroundColor = "rgb(255,255,255,0.8)", 
               borderColor = '#333', borderWidth = 1,
               textStyle = list(color = '#333'))
   
-  songs %>% 
+  g2 <- songs %>% 
     drop_na() %>%
     mutate(Var = !!sym(var)) %>% 
-    arrange(Var) %>%
-    slice(1:10, (n() - 9):n()) %>% 
-    mutate(Top = rep(c("Menores", "Maiores"), each = 10)) %>% 
+    slice_max(order_by = Var, n = 10) %>% 
     group_by(album_name) %>% 
     e_charts(SName) %>% 
     e_bar(Var, stack = "grp") %>% 
     e_flip_coords() %>% 
     e_labels(position = "right") %>% 
-    e_mark_line(data = list(yAxis = 9), title = "Divisão") %>% 
+    e_grid(left = "40%") %>% 
+    e_title("Valores Maiores") %>%
+    e_legend(bottom = 0) %>% 
     e_tooltip(backgroundColor = "rgb(255,255,255,0.8)", 
               borderColor = '#333', borderWidth = 1,
               textStyle = list(color = '#333'))
+  
+  e_arrange(g2, g1, rows = 1, cols = 2)
   
 }
 
@@ -772,7 +774,44 @@ boxplot_por_album("tempo")
 top10var_por_album("tempo")
 ```
 
-# Similarity
+#
+
+```{r}
+library(d3scatter)
+
+variaveis <- songs %>% select(6:14) %>% names()
+shared_songs <- songs %>% 
+  pivot_longer(6:14, names_to = "varx", values_to = "valuex") %>% 
+  slice(rep(1:n(), 9)) %>% 
+  cbind(
+    songs %>% 
+      pivot_longer(6:14, names_to = "vary", values_to = "valuey") %>% 
+      select(6:7) %>% 
+      slice(rep(1:n(), each = 9)) 
+    )
+
+shared_songs <- SharedData$new(shared_songs)
+
+bscols(widths = c(3, NA),
+       
+  list(
+    filter_select("varx", "Eixo X", shared_songs, ~varx, multiple = F),
+    filter_select("vary", "Eixo Y", shared_songs, ~vary, multiple = F)
+  ),
+  
+  # ggplotly( PORQUE NÃO APARECE NADAAA
+  # 
+  #   ggplot(shared_songs, aes(x = valuex, y = valuey, color = varx)) +
+  #     geom_point()
+  # 
+  #   ),
+  
+  d3scatter(shared_songs, ~valuex, ~valuey, ~factor(album_name))
+  
+)
+```
+
+# Similaridades
 
 Primeira tentativa com word2vec que eu não achei tão legal o resultado
 
@@ -791,24 +830,9 @@ embedding <- predict(model, c("beats"), type = "embedding")
 
 predict(model,c("beats"),type ="nearest",top_n =5) # 5 palavras mais similares
 
-
 ```
 
-```{r}
-library(d3scatter)
-
-shared_mtcars <- SharedData$new(mtcars)
-bscols(widths = c(3,NA,NA),
-  list(
-    filter_checkbox("cyl", "Cylinders", shared_mtcars, ~cyl, inline = TRUE),
-    filter_slider("hp", "Horsepower", shared_mtcars, ~hp, width = "100%"),
-    filter_select("auto", "Automatic", shared_mtcars, ~ifelse(am == 0, "Yes", "No"))
-  ),
-  d3scatter(shared_mtcars, ~wt, ~mpg, ~factor(cyl), width="100%", height=250),
-  d3scatter(shared_mtcars, ~hp, ~qsec, ~factor(cyl), width="100%", height=250)
-)
-```
-
+## Similaridade entre as letras
 
 Cossine similarity (tried to keep the 10 more common words in each song) e testar no lugar da freq, o td-idft
 
@@ -832,28 +856,42 @@ cosine_sim <- function(a, b) crossprod(a,b)/sqrt(crossprod(a)*crossprod(b))
 
 calc_cos_sim <- function(name, freq = freq_by_song) {
   
-  freq2 <- freq %>% select(-c(word, name))
+  freq <- freq %>% select(-c(word))
   
-  sapply(freq2, list) %>% 
+  sapply(freq, list) %>% 
     map(cosine_sim, freq %>% pull(name)) %>% 
     unlist() %>% 
     as.data.frame() %>% 
     rename(Similarity = ".")
-    # slice_max(order_by = Similarity, n = 5)
   
 }
 
 # knitr::kable(calc_cos_sim("15 Minutes"))
+similaridades <- mapply(calc_cos_sim, freq_by_song %>% names() %>% .[-1]) %>% 
+  bind_cols() %>% 
+  pivot_longer(1:85, names_to = "song1", values_to = "Similaridade") %>% 
+  mutate(song1 = str_remove(song1, ".Similarity"),
+         song2 = freq_by_song %>% names() %>% .[-1] %>% rep(each = 85),
+         Similaridade = round(Similaridade, 3)) %>% 
+  filter(Similaridade != 1)
+
 ```
 
 ```{r}
-# teste <- calc_cos_sim("15 Minutes")
-# shared_demo <- SharedData$new(teste)
-# 
-# filter_select(
-#   id = "id-selector", label = "ID", 
-#   sharedData = shared_demo
-# )
+shared_similaridades <- SharedData$new(similaridades)
+
+bscols(widths = c(3, NA),
+
+  list(
+    filter_select("song1", "Escolha a Música", 
+                  shared_similaridades, ~song1, multiple = F)
+  ),
+
+  datatable(shared_similaridades)
+
+)
 ```
+
+## Similaridade entre as variáveis
 
 
